--- a/css/main.css
+++ b/css/main.css
@@ -1,21 +1,32 @@
 
+@media screen and (max-width: 767px)
 
+{
 
 body {margin: 0px;
       padding: 0px;
       font-size: 16px;}
 
-.logo {float: left;}
+header {background-image: url(../img/bg-intro.svg);
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        height: 643px;}
+
+.logo {float: left; display: inline-block;}
 
 .wlogo {fill: white;
         position: relative;
         z-index: 1;}
 
-header {background-image: url(../img/bg-intro.svg);
-        background-position: center;
-        background-repeat: no-repeat;
-        height: 443px;}
-
 .key {height: 234px;
       position: relative;
-      z-index: 0;}
+      top: 200px;
+      display: block;
+      margin: auto;}
+
+
+
+
+
+}
