--- a/css/main.css
+++ b/css/main.css
@@ -17,31 +17,33 @@ header {background-image: url(../img/bg-intro.svg);
         height: 443px;
         margin-top: 0;}
 
-.section-a__icons {padding-top: 50px;
+.section-a__icons {margin-top: 50px;
                    margin-left: 0px;
                    float: right;
                    color: white;
                    font-size: 10px;
                    margin-right: 42px;
                    position: relative;
-                   top: -271px;
+                   top: -161px;
                    z-index: 3;}
 
 .fa-facebook-f {margin-left: 23px;
                 margin-right:23px;}
 
 .logo {float: left;
-       padding-top: 35px;
+       margin-top: 35px;
        margin-left: 41px;
-       top: -271px;
+       top: -161px;
        position: relative;
        z-index: 2;}
 
 .wlogo {fill: white;}
 
 .key {height: 177px;
-      margin-top: 111px;
+      position: relative;
+      top: 111px;
       display: block;
+      margin: auto;
       z-index: 1;}
 
 .key-wrapper {width: 100%;
