--- a/css/main.css
+++ b/css/main.css
@@ -10,11 +10,12 @@ body {margin: 0px;
       padding: 0px;
       font-size: 16px;}
 
-header {background-image: url(../img/bg-intro.svg);
+.bg {background-image: url(../img/bg-intro.svg);
         background-size: 100% 100%;
         background-position: center;
         background-repeat: no-repeat;
         height: 443px;
+        width: 100%;
         margin-top: 0;}
 
 .section-a__icons {margin-top: 50px;
@@ -24,7 +25,7 @@ header {background-image: url(../img/bg-intro.svg);
                    font-size: 10px;
                    margin-right: 42px;
                    position: relative;
-                   top: -161px;
+                   top: -440px;
                    z-index: 3;}
 
 .fa-facebook-f {margin-left: 23px;
@@ -33,7 +34,7 @@ header {background-image: url(../img/bg-intro.svg);
 .logo {float: left;
        margin-top: 35px;
        margin-left: 41px;
-       top: -161px;
+       top: -440px;
        position: relative;
        z-index: 2;}
 
@@ -52,7 +53,8 @@ header {background-image: url(../img/bg-intro.svg);
 
 .section-a_left-align {display: flex;
                        flex-flow: column nowrap;
-                       align-items: center;}
+                       align-items: center;
+                       width: 100%;}
 
 .section-a_left-align__h {margin-top: 9px;
                           color: rgb(7, 4, 62);
@@ -95,8 +97,43 @@ header {background-image: url(../img/bg-intro.svg);
 
 {
 
+html, body {height: 100%;}
 
+.section-a {display: flex;
+            flex-flow: row nowrap;
+            align-items: center;
+            height: 100%;
+            min-height: 100%;
+            width: 100%;}
 
+.column-left {display: flex;
+              flex-flow: column nowrap;
+              align-items: center;
+              justify-content: center;
+              background-image: linear-gradient(to left, #1a1275, #6560b2);
+              height: 100%;
+              width: 47.22%;}
+
+.column-right {display: flex;
+              flex-flow: column nowrap;
+              align-items: center;
+              justify-content: center;
+              height: 100%;
+              width: 52.78%;}
+
+.section-a_left-align {width: 76.44%;}
+
+.logo-wrapper {align-self: flex-start;
+               margin-left: 12%;
+               position: relative;
+               top: -200px;}
+
+.section-a__icons {align-self: flex-end;
+                  margin-right: 14%;
+                  position: relative;
+                  top: -230px;}
+
+.fa-facebook-f {margin: 0 45px;}
 
 
 
